--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "is-odd": "^3.0.1"
+    "is-odd": "^3.0.1",
+    "nodemon": "^2.0.18",
+    "puppeteer": "^15.1.0"
   }
 }
